# FoundationKit

./: .gitignore  Build_Config.txt  CleanForCommit.bat  FoundationKitFramework.sln  FoundationKitUnitTest170815.vspx  README.md  copy_publish.bat  新建文本文档.txt
ApplicationFramework/ApplicationFramework/: Application.h  ApplicationDelegate.h
ApplicationFramework/ApplicationFramework/Events/: EventAcceleration.h  EventDispatcher.cpp  EventKeyboard.cpp  EventKeyboard.h  EventListenerAcceleration.h  EventListenerController.cpp  EventListenerCustom.cpp  EventListenerKeyboard.cpp  EventListenerMouse.h  EventMouse.h  EventTouch.h  GameController-iOS.mm  GameController.h  IMEDelegate.h  IMEDispatcher.cpp  KeyboardExampleWindows.cpp  Touch.cpp  Touch.h
ApplicationFramework/ApplicationFramework/win32/: Application.cpp  Application.h
ApplicationFramework/proj.win32/: Application.vcxproj  Application.vcxproj.filters
BlockChain/: Block.hpp  BlockChain.hpp  BlockChain.sln  BlockChain.vcxproj  BlockChain.vcxproj.filters  BlockHeader.hpp  KeyPair.hpp  RSAKeyPair.hpp  SHA256.hpp  Transaction.hpp  main.cpp
BlockChain/BlockChainTmp/: Block.hpp  BlockChain.hpp  BlockChainTest.hpp  BlockHeader.hpp  Identite.hpp  KeyPair.hpp  Message.hpp  Transaction.hpp
CacheCode/experimental/: AsyncTask.hpp  BehaviourTree.hpp  FileHandle.cpp  FileHandle.hpp  threadsafe_stack.hpp
EventKit/EventKit/detail/: iocp_serveice.hpp
EventKit/proj.win32/: EventKit.props  EventKit.vcxproj  EventKit.vcxproj.filters
FoundationKit/: FoundationKitDefines.h  FoundationKitMacros.h
FoundationKit/FoundationKit/: FoundationKitDefines.h  FoundationKitMacros.h  FoundationKitVersion.hpp  FoundationKitVersion.hpp.in  FoundationMacros.h  FoundationMacros.hpp  FunctionHelper.h  GenericPlatformDefines.h  GenericPlatformMacros.cpp  GenericPlatformMacros.h  GenericPlatformMacros.hpp  LanguageFeatures.h  LanguageFeatures.hpp  forward.hpp
FoundationKit/FoundationKit/Base/: Buffer.h  ByteStream.hpp  ByteSwap.h  ByteSwap.hpp  CompilerMacros.h  Data.h  DataStream.cpp  DataStream.h  DataStreamTest.h  DateTime.cpp  DateTime.h  Dictionary.h  Dictionary.inl  DictionaryTest.h  ElapsedTimer.h  ITickable.h  MathContent.h  MathEx.cpp  MathEx.h  MathUtil.cpp  MathUtil.h  MathUtil.inl  MathUtilNeon.inl  Matrix.cpp  Matrix.h  Matrix.inl  Quaternion.cpp  Quaternion.h  Quaternion.inl  RandomHelper.h  Rect.cpp  Rect.h  Runnable.h  Runnable.hpp  Size.cpp  Size.h  Time.cpp  Time.h  TimeEx.cpp  TimeEx.h  (+52 more)
FoundationKit/FoundationKit/Cache/: AbstractCache.h  AbstractStrategy.h  KeyValueArgs.h  LRUCache.h  LRUCacheTest.h  LRUStrategy.h
FoundationKit/FoundationKit/Crypto/: Base58.cpp  Base58.hpp  Base64.cpp  Base64.h  Base64.hpp  aes.cpp  aes.h  aes.hpp  crc.hpp  des.cpp  md5.hpp  sha1.hpp  urlencode.hpp
FoundationKit/FoundationKit/Data/: Buffer.h  DataStream.cpp  DataStream.h  DataStreamTest.h  Dictionary.h  Dictionary.inl  DictionaryTest.h  Value.cpp  Value.h  Value.inl  ValueTest.h
FoundationKit/FoundationKit/Device/: usb_linux.c  usb_osx.c
FoundationKit/FoundationKit/Events/: Event.cpp  Event.h  EventAcceleration.cpp  EventAcceleration.h  EventController.cpp  EventController.h  EventCustom.cpp  EventCustom.h  EventDispatcher.cpp  EventDispatcher.h  EventKeyboard.cpp  EventKeyboard.h  EventListener.cpp  EventListener.h  EventListenerAcceleration.cpp  EventListenerController.cpp  EventListenerController.h  EventListenerCustom.cpp  EventListenerCustom.h  EventListenerKeyboard.cpp  EventListenerKeyboard.h  EventListenerMouse.cpp  (+14 more)
FoundationKit/proj.android/: .project  AndroidManifest.xml
FoundationKit/proj.android_studio/: import-summary.txt  local.properties
FoundationKit/proj.win32/: FoundationKit.vcxproj  FoundationKit.vcxproj.filters  FoundationKit_headers.props  ~AutoRecover.FoundationKit.vcxproj
FoundationKitCPP03/FoundationKit/: FoundationMacros.hpp  GenericPlatformMacros.cpp  GenericPlatformMacros.hpp  LanguageFeatures.hpp  forward.hpp
FoundationKitCPP03/proj.win32/: AppDelegate.cpp  AppDelegate.h  Application.h  ApplicationProtocol.h  FoundationKit.vcproj  FoundationKit.vsprops  FoundationKitCPP03.sln  FoundationKitTest.vcproj  NetFramework.vcproj  main.cpp
FoundationKitFramework.xcworkspace/: contents.xcworkspacedata
FoundationKitFramework.xcworkspace/xcshareddata/: DevelopmentFramework.xccheckout  FoundationKitFramework.xccheckout
FoundationKitUnitTest/proj.android/: .classpath  .project  AndroidManifest.xml  project.properties
FoundationKitUnitTest/proj.win32/: AppDelegate.cpp  AppDelegate.h  Application.cpp  FoundationKitUnitTest.vcxproj  FoundationKitUnitTest.vcxproj.filters  GoogleMapUtils.hpp  main.cpp  main.lua  tracey.cpp
FoundationKitUnitTest/script/: main.lua  req.lua
HTTPClient/: CMakeLists.txt
HTTPClient/HTTPClient/: HTTPClient.cpp  HTTPClient.hpp  HTTPClientVersion.hpp  HTTPCode.hpp  HTTPDownloader.cpp  HTTPRequest.cpp  HTTPRequest.hpp  HTTPResponse.cpp  HTTPResponse.hpp  MimeTypes.cpp  MimeTypes.h  MimeTypes.hpp  libcurl_init.hpp
HTTPClient/proj.win32/: HTTPClient.sln  HTTPClient.vcxproj  HTTPClient.vcxproj.filters
HTTPDownloader/HTTPDownloader/: HTTPDownloadNode.cpp  HTTPDownloadNode.hpp  HTTPDownloader.cpp  HTTPDownloader.hpp  libcurl_init.cpp  libcurl_init.hpp
HTTPDownloader/proj.win32/: HTTPDownloader.vcxproj  HTTPDownloader.vcxproj.filters
NetFramework/proj.win32/: NetFramework.props  NetFramework.vcxproj  NetFramework.vcxproj.filters
Networking/Networking/: IProtocol.h  libcurl_init.cpp  winsock_init.hpp  winsock_init.ipp
OnlineFramework/proj.win32/: OnlineFramework.props  OnlineFramework.vcxproj  OnlineFramework.vcxproj.filters
Programs/HTTPClient/: CMakeLists.txt
Programs/HTTPClient/CMake/: android.toolchain.wapper.cmake
Programs/HTTPClient/CMake/Modules/: BuildModules.cmake  BuildSet.cmake  SetCompilerOptions.cmake
Programs/HTTPClient/HTTPClient/: HTTPClient.cpp  HTTPClient.hpp  HTTPClientOptions.hpp  HTTPClientVersion.hpp  HTTPClientVersion.hpp.in  HTTPDownloader.hpp  HTTPRequest.cpp  HTTPRequest.hpp  HTTPUploader.cpp  libcurl_init.cpp
Tools/: downloader.py  readme.txt
(+857 files in other folders)
