project(HTTPClient)

cmake_minimum_required(VERSION 3.0)

set(HTTPCLIENT_VERSION_MAJOR "1")
set(HTTPCLIENT_VERSION_MINOR "0")
set(HTTPCLIENT_VERSION_PATCH "0")
set(HTTPCLIENT_VERSION_EXTRA "")
set(HTTPCLIENT_VERSION "${HTTPCLIENT_VERSION_MAJOR}.${HTTPCLIENT_VERSION_MINOR}")
set(HTTPCLIENT_VERSION_FULL "${HTTPCLIENT_VERSION}.${HTTPCLIENT_VERSION_PATCH}${HTTPCLIENT_VERSION_EXTRA}")

message(STATUS "Build HTTPClient Version:${HTTPCLIENT_VERSION}")

set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/Binaries/HTTPClient/) 
set(HTTPCLIENT_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_MODULE_PATH ${HTTPCLIENT_ROOT_PATH}/CMake/Modules/)

include(BuildSet)
BuildSet()

#install (FILES ${HEADER_LIST} DESTINATION include)

