project(HTTPClient)

cmake_minimum_required(VERSION 3.0)


set(SVN_DIR ${PROJECT_SOURCE_DIR})

if(EXISTS "${SVN_DIR}/.svn/")
  find_package(Subversion)
  if(SUBVERSION_FOUND)
    Subversion_WC_INFO(${SVN_DIR} Project)
    set(VERSION_REVISION ${Project_WC_REVISION})
  endif(SUBVERSION_FOUND)
endif(EXISTS "${SVN_DIR}/.svn/")

set(HTTPCLIENT_VERSION_MAJOR "1")
set(HTTPCLIENT_VERSION_MINOR "0")
set(HTTPCLIENT_VERSION_BUILD "0")
set(HTTPCLIENT_VERSION_REVISION "0")
set(HTTPCLIENT_VERSION_FULL "\"${HTTPCLIENT_VERSION_MAJOR}.${HTTPCLIENT_VERSION_MINOR}.${HTTPCLIENT_VERSION_BUILD}.${HTTPCLIENT_VERSION_REVISION}\"")

message(STATUS "Build HTTPClient Version:${HTTPCLIENT_VERSION_FULL}")

configure_file ("${CMAKE_CURRENT_SOURCE_DIR}/HTTPClient/HTTPClientVersion.hpp.in" "${CMAKE_CURRENT_SOURCE_DIR}/HTTPClient/HTTPClientVersion.hpp")

set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/Binaries/HTTPClient/) 

set(HTTPCLIENT_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

set(CMAKE_MODULE_PATH ${HTTPCLIENT_ROOT_PATH}/CMake/Modules/)

include(BuildSet)
BuildSet()

include_directories(${CMAKE_CURRENT_SOURCE_DIR}
                    ${CMAKE_CURRENT_SOURCE_DIR}/../../FoundationKit
                    ${CMAKE_CURRENT_SOURCE_DIR}/../../ThirdParty/curl/include/win32/curl)

file(GLOB_RECURSE SOURCE_LIST "${CMAKE_CURRENT_SOURCE_DIR}/HTTPClient/*.cpp")
file(GLOB_RECURSE HEADER_LIST "${CMAKE_CURRENT_SOURCE_DIR}/HTTPClient/*.hpp")

add_library(HTTPClient STATIC ${SOURCE_LIST} ${HEADER_LIST})
set_target_properties(HTTPClient
    PROPERTIES
    PUBLIC_HEADER "${HEADER_LIST}")

if(NOT CMAKE_ANDROID_ARCH_ABI)
    set(CMAKE_ANDROID_ARCH_ABI ${ANDROID_ABI})
endif()

message(STATUS "CMAKE_ANDROID_ARCH_ABI=${CMAKE_ANDROID_ARCH_ABI}")
message(STATUS "ANDROID_ABI=${ANDROID_ABI}")

install(TARGETS HTTPClient
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib/${CMAKE_ANDROID_ARCH_ABI}
  PUBLIC_HEADER DESTINATION include)

#install (FILES ${HEADER_LIST} DESTINATION include)

